esto simula otra computadora

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>aprendemos git </h1>
     <h2>esto se creo en la rama coder</h2>
+    <h3>esto es de otra computadora</h3>
 </body>
 </html>
